gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test23674.d
version https://git-lfs.github.com/spec/v1
oid sha256:61d1f1edf0fa1c9471221fc5860922364e076e1a8d4a5b94779bcb5573262304
size 316
